bug button on mobile version
fixed bug button on mobile version

--- a/front-end/src/components/landingPageComponents/mainVisual/mainVisual.scss
+++ b/front-end/src/components/landingPageComponents/mainVisual/mainVisual.scss
@@ -34,6 +34,17 @@ background-size: cover;
             height: 50px;
             font-size:clamp(10px, 10vw, 16px);
             box-shadow: 5px 5px 43px 21px rgba(0,0,0,0.63);
+
+            @media (max-width: 600px)  {
+                width: clamp(80px, 10vw, 100px);
+                height: 30px;
+                font-size:clamp(10px, 10vw, 12px);
+                border-radius: 6px;
+                box-shadow: 5px 5px 43px 1px rgba(0,0,0,0.63);
+
+                
+
+            }
         }
     }
 
